Fix style on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -115,6 +115,7 @@
  	text-decoration: none;
 	color: #A52714 !important;
  }
+
  /**
   * Header
   */
@@ -184,7 +185,7 @@
  }
 
  .header .name .title {
-	font-size: 52px;
+	font-size: 50px;
 	font-weight: 300;
 	margin-top: 0;
 	margin-bottom: 0;
